# AI-file-renamer

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
