[project]
name = "ai-file-renamer"
version = "0.1.0"
description = "AI-powered file renaming tool with a macOS Finder Quick Action (Automator) for one-click use"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff",
    "pylint",
    "beautysh",
    "setuptools",
    "openai",
    "pillow",
    "python-dotenv"
]

